--- a/oh-package.json5
+++ b/oh-package.json5
@@ -4,8 +4,9 @@
   "dependencies": {
     "@ohos/axios": "^2.2.2",
     "@ohos/crypto-js": "^2.0.3",
-    "@pura/harmony-utils": "^1.0.6",
-    "@jxt/xt_hud": "^3.1.3"
+    "@pura/harmony-utils": "^1.0.7",
+    "@jxt/xt_hud": "^3.1.3",
+    "@gancao/hptdialog": "^1.0.4",
   },
   "devDependencies": {
     "@ohos/hypium": "1.0.18",
